2006-03-31  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ advanced-notation, changing-defaults,
	instrument-notation, invoking, music-glossary: backport doc.

2006-03-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/bibliography/GNUmakefile ($(outdir)/%.html): set
	BSTINPUTS
	($(outdir)/%.html): backport of fix.

	* VERSION: release 2.8.1

	* lily/pango-font.cc (pango_item_string_stencil): update from 2.9.x

2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ttf.cc (print_trailer): only print existing glyphs. 

2006-03-30  Joe Neeman  <joeneeman@gmail.com>

	* lily/stem-tremolo.cc (print): for whole notes (and breves, etc.)
	position the tremolo based on the position of the notehead.

	* input/regression/stem-tremolo.ly: add example of unbeamed eighth
	notes and update the texidoc line with the new positioning rules.

2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ttf.cc (print_trailer): oops. Backport brown paper bag bugfix.

2006-03-29  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* backports:

	* input/regression/stem-tremolo-position.ly: new file.

	* lily/stem-tremolo.cc: remove Stem_tremolo::dim_callback

2006-03-28  Joe Neeman  <joeneeman@gmail.com>

	* lily/stem-tremolo.cc (print): position
	the tremolo depending only on the end of the stem
	and not on the notehead
	(raw_stencil): center, on the middle staff line, the
	flag that is closest to the end of the stem (previously
	the bottom flag)
	(calc_width): add this callback to shorten a tremolo when
	it is beamed or it is stemup with a flag
	(style): add this callback to make a tremolo rectangular when
	it is beamed or it is stemup with a flag
	(rotated_box): this is like Lookup::beam but makes a rotated
	rectangle instead of a parallelogram

	* lily/stem.cc (calc_stem_info): make sure the stem
	is long enough to fit the tremolo
	(calc-length): reduce the length of tremolo stems since the
	tremolo code is now capable of better positioning
